<resources>
    <string name="app_name">MYtinerary</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="facebook_app_id">1086289015092130</string>
    <string name="fb_login_protocol_scheme">fb1086289015092130</string>
    <string name="select_state">Select your home state</string>
    <string-array name="state_abbreviations">
        <item>Select state</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string name="select_city">Select city</string>
    <string-array name="cities">
        <item>Select city</item>
        <item>Seattle</item>
        <item>Menlo Park</item>
    </string-array>
    <string name="back_btn_content_desc">Back Button</string>
    <string name="generate">Generate</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="budget">Trip Budget</string>
    <string name="city">City</string>
    <string name="event_name">Event Name</string>
    <string name="empty_slot">Empty slot</string>
    <string name="days">Days</string>
    <string name="budget_bold">Budget</string>
    <string name="cost">Cost</string>
    <string name="cost_bold">Cost: </string>
    <string name="rating">Rating: </string>
    <string name="address">Address: </string>
    <string name="description">Description: </string>
    <string name="website">Website: </string>
    <string name="schedule">Schedule</string>
    <string name="dollar_sign">$</string>
    <string name="place_holder">…</string>
    <string name="num_zero">0</string>
    <string name="profile_image_prompt">Set Profile Image</string>
    <string name="bio_prompt">Write a short bio</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="favorites">Favorites</string>
    <string name="previous_trips">Previous Trips</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="current_trips">Current Trips</string>
    <string name="favorite_trips">Saved Trips</string>
    <string name="edit">Edit</string>
    <string name="save_for_later">Save for later</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="selected_categories">Selected Categories</string>
    <string name="remaining">Remaining</string>
    <string name="morning_event">Morning Event</string>
    <string name="afternoon_event">Afternoon Event</string>
    <string name="evening_event">Evening Event</string>
    <string name="regenerate_event">Regenerate event</string>
    <string name="remove_event">Remove event</string>
    <string name="tags">Tags</string>
    <string name="users">users</string>
    <string name="liked_by">Liked by</string>
    <string name="comment">comment</string>
    <string name="save">save</string>
    <string name="free">FREE</string>
    <string name="compose_trip">Compose Trip</string>
    <string name="profile_image_keyword">profileImage</string>
    <string name="achievements">Achievements</string>
</resources>
